用col和row做搜素栏的布局

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -9,8 +9,20 @@ html, body, #app {
 }
 
 .el-submenu__title {
-  > i{
+  > i {
     color: #333c4f !important;
   }
 }
 
+.el-breadcrumb__separator {
+  color: #333c4f !important;
+}
+
+.el-breadcrumb {
+  margin-bottom: 15px;
+  font-size: 12px;
+}
+
+.el-card {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
+}
